Add missing palette property to QQuickWindow

This was forgotten in 1875ad7f92cad270cc5857d71096a4b46c27c562.

Fixes: QTBUG-91365
Pick-to: 6.2
Change-Id: I8dabf0e2a5a13f0db5feac5c03e3494948393cb7
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>